# rust-voxel-game

./: Cargo.toml
src/: block.rs  camera.rs  chunk.rs  command.rs  game.rs  gfx.rs  input.rs  main.rs  mesh.rs  player.rs  render.rs  voxel_mesher.rs  world.rs
src/shaders/: cube.wgsl
