[package]
name = "rust_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
wgpu = { version = "28.0.0", default-features = false, features = ["std", "wgsl", "vulkan"] }
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.27"

[[bin]]
name = "rust_game"
path = "src/main.rs"
